# actions-dynamic-matrix-testing

./: .gitignore  CMakeLists.txt  README.md
.github/: matrices.yaml
.github/scripts/: generate-matrices.py
.github/workflows/: build.yml  dynamic.yml
docs/: CMakeLists.txt  index.md
include/admt/: admt.h
pyadmt/: CMakeLists.txt
python/: main.cpp
src/: CMakeLists.txt
src/admt/: admt.cpp
tests/: CMakeLists.txt  main.cpp
